# aare-edge

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.py
AareEdgeDemo/: Package.swift  project.yml
AareEdgeDemo/AareEdgeDemo/: AareEdgeDemoApp.swift  ContentView.swift  MainTabView.swift  PHIDetectionViewModel.swift  PolicyVerificationView.swift
AareEdgeDemo/AareEdgeDemo.xcodeproj/: project.pbxproj
AareEdgeSDK/: Package.swift  README.md
AareEdgeSDK/Sources/AareEdgeSDK/: AareEdgeSDK.swift  EntityExtractor.swift  MockPHIDetector.swift  PHIDetector.swift  Tokenizer.swift  Z3Lite.swift
AareEdgeSDK/Tests/AareEdgeSDKTests/: TokenizerTests.swift  Z3LiteTests.swift
apps/ios/AareCore/AareCore/: AareCoreApp.swift
apps/ios/AareCore/AareCore/Services/: VerificationService.swift
apps/ios/AareCore/AareCore/ViewModels/: VerificationViewModel.swift
apps/ios/AareCore/AareCore/Views/: ContentView.swift  SettingsView.swift
configs/: training_config.yaml
scripts/: demo.py  generate_augmented_data.py
sdk/swift/: Examples.md  Package.swift  README.md
sdk/swift/Sources/AareEdge/: AareEdge.swift
sdk/swift/Sources/AareEdge/Configuration/: HIPAAConfiguration.swift
sdk/swift/Sources/AareEdge/Inference/: PHIExtractor.swift  Tokenizer.swift
sdk/swift/Sources/AareEdge/Verification/: Verifier.swift  Z3Engine.swift
sdk/swift/Tests/AareEdgeTests/: AareEdgeTests.swift
src/: __init__.py
src/verification/: __init__.py  rules.py  verifier.py
tests/: QUICKSTART.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_extractor.py  test_label_mapper.py  test_rules.py  test_verifier.py
